# chainlit-claude

./: .env.example  .gitignore  README.md  app.py  chat.py  llm.py  prompts.yaml  pyproject.toml  readme.md  todo.md
.chainlit/: config.toml
anthropic_service/: claude_assistant.py  todo.md
anthropic_service/prompts/: system_prompt.yaml
anthropic_service/tools/: test_firecrawl.py  tools.py
local_tests/: test_anthropic.py
src/: config.py  logger.py
src/assistants/: claude_assistant.py
src/assistants/prompts/: system_prompt.yaml
src/handlers/: message_handler.py
src/tools/: firecrawl_search_tool.py
src/utils/: image_utils.py
