[tool.poetry]
name = "chainlit-claude"
version = "0.1.0"
description = ""
authors = ["AZ <azuev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.402"
langchain-anthropic = "^0.1.22"
python-dotenv = "^1.0.1"
langchain = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
